cdk.out/VpcId.template.json
{
 "Resources": {
  "CompanyVpcC336B6CE": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcId/CompanyVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcId/CompanyVpc/Resource"
   }
  },
  "CompanyVpcPublicSubnet1Subnet5632C924": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "VpcId/CompanyVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "CompanyVpcC336B6CE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcId/CompanyVpc/PublicSubnet1/Subnet"
   }
  },
  "CompanyVpcPublicSubnet1RouteTable1F2E3BB2": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcId/CompanyVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "CompanyVpcC336B6CE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcId/CompanyVpc/PublicSubnet1/RouteTable"
   }
  },
  "CompanyVpcPublicSubnet1RouteTableAssociation1AD06C22": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CompanyVpcPublicSubnet1RouteTable1F2E3BB2"
    },
    "SubnetId": {
     "Ref": "CompanyVpcPublicSubnet1Subnet5632C924"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcId/CompanyVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "CompanyVpcPublicSubnet1DefaultRoute47C25F3D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "CompanyVpcIGW9387AEB5"
    },
    "RouteTableId": {
     "Ref": "CompanyVpcPublicSubnet1RouteTable1F2E3BB2"
    }
   },
   "DependsOn": [
    "CompanyVpcVPCGWEB73847B"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcId/CompanyVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "CompanyVpcPublicSubnet1EIPAF4867B1": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcId/CompanyVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcId/CompanyVpc/PublicSubnet1/EIP"
   }
  },
  "CompanyVpcPublicSubnet1NATGateway57787684": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "CompanyVpcPublicSubnet1EIPAF4867B1",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "CompanyVpcPublicSubnet1Subnet5632C924"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcId/CompanyVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "CompanyVpcPublicSubnet1DefaultRoute47C25F3D",
    "CompanyVpcPublicSubnet1RouteTableAssociation1AD06C22"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcId/CompanyVpc/PublicSubnet1/NATGateway"
   }
  },
  "CompanyVpcPublicSubnet2Subnet9EBB9193": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "VpcId/CompanyVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "CompanyVpcC336B6CE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcId/CompanyVpc/PublicSubnet2/Subnet"
   }
  },
  "CompanyVpcPublicSubnet2RouteTableE8A727B9": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcId/CompanyVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "CompanyVpcC336B6CE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcId/CompanyVpc/PublicSubnet2/RouteTable"
   }
  },
  "CompanyVpcPublicSubnet2RouteTableAssociation5370D113": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CompanyVpcPublicSubnet2RouteTableE8A727B9"
    },
    "SubnetId": {
     "Ref": "CompanyVpcPublicSubnet2Subnet9EBB9193"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcId/CompanyVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "CompanyVpcPublicSubnet2DefaultRouteC6162F05": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "CompanyVpcIGW9387AEB5"
    },
    "RouteTableId": {
     "Ref": "CompanyVpcPublicSubnet2RouteTableE8A727B9"
    }
   },
   "DependsOn": [
    "CompanyVpcVPCGWEB73847B"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcId/CompanyVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "CompanyVpcPublicSubnet2EIP38D6C712": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcId/CompanyVpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcId/CompanyVpc/PublicSubnet2/EIP"
   }
  },
  "CompanyVpcPublicSubnet2NATGateway5FFC394F": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "CompanyVpcPublicSubnet2EIP38D6C712",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "CompanyVpcPublicSubnet2Subnet9EBB9193"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcId/CompanyVpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "CompanyVpcPublicSubnet2DefaultRouteC6162F05",
    "CompanyVpcPublicSubnet2RouteTableAssociation5370D113"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcId/CompanyVpc/PublicSubnet2/NATGateway"
   }
  },
  "CompanyVpcPrivateSubnet1Subnet62D4669D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "VpcId/CompanyVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "CompanyVpcC336B6CE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcId/CompanyVpc/PrivateSubnet1/Subnet"
   }
  },
  "CompanyVpcPrivateSubnet1RouteTable2326806B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcId/CompanyVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "CompanyVpcC336B6CE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcId/CompanyVpc/PrivateSubnet1/RouteTable"
   }
  },
  "CompanyVpcPrivateSubnet1RouteTableAssociationA3F24EDC": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CompanyVpcPrivateSubnet1RouteTable2326806B"
    },
    "SubnetId": {
     "Ref": "CompanyVpcPrivateSubnet1Subnet62D4669D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcId/CompanyVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "CompanyVpcPrivateSubnet1DefaultRoute9CF30FFC": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "CompanyVpcPublicSubnet1NATGateway57787684"
    },
    "RouteTableId": {
     "Ref": "CompanyVpcPrivateSubnet1RouteTable2326806B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcId/CompanyVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "CompanyVpcPrivateSubnet2SubnetEBA8314D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "VpcId/CompanyVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "CompanyVpcC336B6CE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcId/CompanyVpc/PrivateSubnet2/Subnet"
   }
  },
  "CompanyVpcPrivateSubnet2RouteTable6737A7B0": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcId/CompanyVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "CompanyVpcC336B6CE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcId/CompanyVpc/PrivateSubnet2/RouteTable"
   }
  },
  "CompanyVpcPrivateSubnet2RouteTableAssociationF6E98E4A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "CompanyVpcPrivateSubnet2RouteTable6737A7B0"
    },
    "SubnetId": {
     "Ref": "CompanyVpcPrivateSubnet2SubnetEBA8314D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcId/CompanyVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "CompanyVpcPrivateSubnet2DefaultRoute35B5D2FC": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "CompanyVpcPublicSubnet2NATGateway5FFC394F"
    },
    "RouteTableId": {
     "Ref": "CompanyVpcPrivateSubnet2RouteTable6737A7B0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcId/CompanyVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "CompanyVpcIGW9387AEB5": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "VpcId/CompanyVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcId/CompanyVpc/IGW"
   }
  },
  "CompanyVpcVPCGWEB73847B": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "CompanyVpcIGW9387AEB5"
    },
    "VpcId": {
     "Ref": "CompanyVpcC336B6CE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "VpcId/CompanyVpc/VPCGW"
   }
  },
  "CompanyVpcRestrictDefaultSecurityGroupCustomResource891427E9": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "CompanyVpcC336B6CE",
      "DefaultSecurityGroup"
     ]
    },
    "Account": {
     "Ref": "AWS::AccountId"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "VpcId/CompanyVpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:",
             {
              "Ref": "AWS::Partition"
             },
             ":ec2:",
             {
              "Ref": "AWS::Region"
             },
             ":",
             {
              "Ref": "AWS::AccountId"
             },
             ":security-group/",
             {
              "Fn::GetAtt": [
               "CompanyVpcC336B6CE",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "VpcId/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": {
      "Fn::Sub": "cdk-hnb659fds-assets-${AWS::AccountId}-${AWS::Region}"
     },
     "S3Key": "ee7de53d64cc9d6248fa6aa550f92358f6c907b5efd6f3298aeab1b5e7ea358a.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": {
     "Fn::FindInMap": [
      "LatestNodeRuntimeMap",
      {
       "Ref": "AWS::Region"
      },
      "value"
     ]
    },
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "VpcId/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.ee7de53d64cc9d6248fa6aa550f92358f6c907b5efd6f3298aeab1b5e7ea358a",
    "aws:asset:property": "Code"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/12OzWrDMBCEnyV3WY0DIWfXlJJCg7BLrmUtr9Nt7JWRVjYl5N2LmxKVnuaHj2E2Ot9u9XoFc8hse856avSlFrBnBXN4R7vRl+NoVdnx0ZTKxKYnW8eGUZYuucpFwTdoekx96ooQnCUQcnyHF/O0N4scQJ5BcIYvZTxNIJiG9yzoGe/A7clvKkTAfgzIclUVBhe9RVXGIG5IseO//hXGkfj0jzLeTdSif4SAqggBpRY4/XAdl45bWr5f1QtM8JDv9Frn+eozEGU+stCAurrpN3zc02hRAQAA"
   },
   "Metadata": {
    "aws:cdk:path": "VpcId/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Mappings": {
  "LatestNodeRuntimeMap": {
   "af-south-1": {
    "value": "nodejs20.x"
   },
   "ap-east-1": {
    "value": "nodejs20.x"
   },
   "ap-northeast-1": {
    "value": "nodejs20.x"
   },
   "ap-northeast-2": {
    "value": "nodejs20.x"
   },
   "ap-northeast-3": {
    "value": "nodejs20.x"
   },
   "ap-south-1": {
    "value": "nodejs20.x"
   },
   "ap-south-2": {
    "value": "nodejs20.x"
   },
   "ap-southeast-1": {
    "value": "nodejs20.x"
   },
   "ap-southeast-2": {
    "value": "nodejs20.x"
   },
   "ap-southeast-3": {
    "value": "nodejs20.x"
   },
   "ap-southeast-4": {
    "value": "nodejs20.x"
   },
   "ap-southeast-5": {
    "value": "nodejs20.x"
   },
   "ap-southeast-7": {
    "value": "nodejs20.x"
   },
   "ca-central-1": {
    "value": "nodejs20.x"
   },
   "ca-west-1": {
    "value": "nodejs20.x"
   },
   "cn-north-1": {
    "value": "nodejs18.x"
   },
   "cn-northwest-1": {
    "value": "nodejs18.x"
   },
   "eu-central-1": {
    "value": "nodejs20.x"
   },
   "eu-central-2": {
    "value": "nodejs20.x"
   },
   "eu-north-1": {
    "value": "nodejs20.x"
   },
   "eu-south-1": {
    "value": "nodejs20.x"
   },
   "eu-south-2": {
    "value": "nodejs20.x"
   },
   "eu-west-1": {
    "value": "nodejs20.x"
   },
   "eu-west-2": {
    "value": "nodejs20.x"
   },
   "eu-west-3": {
    "value": "nodejs20.x"
   },
   "il-central-1": {
    "value": "nodejs20.x"
   },
   "me-central-1": {
    "value": "nodejs20.x"
   },
   "me-south-1": {
    "value": "nodejs20.x"
   },
   "mx-central-1": {
    "value": "nodejs20.x"
   },
   "sa-east-1": {
    "value": "nodejs20.x"
   },
   "us-east-1": {
    "value": "nodejs20.x"
   },
   "us-east-2": {
    "value": "nodejs20.x"
   },
   "us-west-1": {
    "value": "nodejs20.x"
   },
   "us-west-2": {
    "value": "nodejs20.x"
   }
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-3"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-4"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "il-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      }
     ]
    },
    {
     "Fn::Equals": [
      {
       "Ref": "AWS::Region"
      },
      "us-west-2"
     ]
    }
   ]
  }
 },
 "Outputs": {
  "ExportsOutputRefCompanyVpcC336B6CEAEEF108D": {
   "Value": {
    "Ref": "CompanyVpcC336B6CE"
   },
   "Export": {
    "Name": "VpcId:ExportsOutputRefCompanyVpcC336B6CEAEEF108D"
   }
  },
  "ExportsOutputRefCompanyVpcPrivateSubnet1Subnet62D4669D1CB30236": {
   "Value": {
    "Ref": "CompanyVpcPrivateSubnet1Subnet62D4669D"
   },
   "Export": {
    "Name": "VpcId:ExportsOutputRefCompanyVpcPrivateSubnet1Subnet62D4669D1CB30236"
   }
  },
  "ExportsOutputFnGetAttCompanyVpcC336B6CEDefaultSecurityGroup2425A311": {
   "Value": {
    "Fn::GetAtt": [
     "CompanyVpcC336B6CE",
     "DefaultSecurityGroup"
    ]
   },
   "Export": {
    "Name": "VpcId:ExportsOutputFnGetAttCompanyVpcC336B6CEDefaultSecurityGroup2425A311"
   }
  },
  "ExportsOutputRefCompanyVpcPrivateSubnet2SubnetEBA8314D42E39537": {
   "Value": {
    "Ref": "CompanyVpcPrivateSubnet2SubnetEBA8314D"
   },
   "Export": {
    "Name": "VpcId:ExportsOutputRefCompanyVpcPrivateSubnet2SubnetEBA8314D42E39537"
   }
  },
  "ExportsOutputRefCompanyVpcPublicSubnet1Subnet5632C924E004BC4B": {
   "Value": {
    "Ref": "CompanyVpcPublicSubnet1Subnet5632C924"
   },
   "Export": {
    "Name": "VpcId:ExportsOutputRefCompanyVpcPublicSubnet1Subnet5632C924E004BC4B"
   }
  },
  "ExportsOutputRefCompanyVpcPublicSubnet2Subnet9EBB919396B789EF": {
   "Value": {
    "Ref": "CompanyVpcPublicSubnet2Subnet9EBB9193"
   },
   "Export": {
    "Name": "VpcId:ExportsOutputRefCompanyVpcPublicSubnet2Subnet9EBB919396B789EF"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
